fix: be workflow

--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -82,8 +82,8 @@ jobs:
     - name: Verify /home/admin directory and create if missing
       run: |
         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
-        sudo mkdir -p /home/admin
-        sudo chown ${{ secrets.ADMIN_USERNAME }}:${{ secrets.ADMIN_USERNAME }} /home/admin
+          sudo mkdir -p /home/admin
+          sudo chown ${{ secrets.ADMIN_USERNAME }}:${{ secrets.ADMIN_USERNAME }} /home/admin
         EOF
 
     - name: Install Java JDK on VM
@@ -96,18 +96,22 @@ jobs:
     - name: Copy Artifact to VM
       run: |
        scp -i ssh_key -o StrictHostKeyChecking=no backend-build/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/expenses-manager-backend.jar
-
+    
     - name: Kill previous backend process (if any)
       run: |
-       if lsof -i :8080; then
-        sudo fuser -k 8080/tcp || true
-       else
-        echo "No process running on port 8080"
-       fi
+        ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
+          if lsof -i :8080; then
+            sudo fuser -k 8080/tcp || true
+          else
+            echo "No process running on port 8080"
+          fi
+        EOF
        
     - name: Run Backend Application
       run: |
-       nohup 'java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod --spring.datasource.url=${{ secrets.DB_URL }} --spring.datasource.username=${{ secrets.DB_USERNAME }} --spring.datasource.password=${{ secrets.DB_PASSWORD }}' > output.out 2>&1 &
+        ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
+          nohup 'java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod --spring.datasource.url=${{ secrets.DB_URL }} --spring.datasource.username=${{ secrets.DB_USERNAME }} --spring.datasource.password=${{ secrets.DB_PASSWORD }}' > output.out 2>&1 &
+        EOF
 
     - name: Remove SSH private key file
       run: rm ssh_key
