--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -40,19 +40,12 @@ jobs:
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
-    - name: Get VM Public IP
-      id: get-vm-ip
-      run: |
-        echo "vm_ip=$(az vm list-ip-addresses --name ${{ secrets.EXM_VM_NAME }} --resource-group ${{ secrets.RESOURCE_GROUP_NAME }} --query "[0].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)" >> $GITHUB_OUTPUT
-      if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-
     - name: Replace BE_BASE_URL in environment.prod.ts
-      run: sed -i 's/%{BE_BASE_URL}/${{ steps.get-vm-ip.outputs.vm_ip }}:8080/' expenses-manager-frontend/src/main/frontend/src/environments/environment.prod.ts
+      run: sed -i 's/%{BE_BASE_URL}/https://${{ vars.DEPLOY_DOMAIN }}:8080/' expenses-manager-frontend/src/main/frontend/src/environments/environment.prod.ts
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     - name: Build Angular application using Maven
-      run: |
-         mvn clean install -DBE_BASE_URL=${{ steps.get-vm-ip.outputs.vm_ip }}:8080
+      run: mvn clean install
       working-directory: expenses-manager-frontend
 
     - name: Upload build artifacts
@@ -94,30 +87,61 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key
         chmod 600 ssh_key
 
+    - name: Replace needed values into nginx.conf
+      env:
+        GITHUB_FE_SITE_DOMAIN: ${{ vars.DEPLOY_DOMAIN }}
+        GITHUB_ADMIN_USERNAME: ${{ secrets.ADMIN_USERNAME }} 
+      run: |
+        sed -i "s/REPLACE_DOMAIN/$GITHUB_FE_SITE_DOMAIN/g" .github/workflows/configs/nginx.conf
+        sed -i "s/REPLACE_USER/$GITHUB_ADMIN_USERNAME/g" .github/workflows/configs/nginx.conf
 
-    - name: Copy build files to VM
+    - name: Copy build files and nginx config to VM
       run: |
         scp -i ssh_key -o StrictHostKeyChecking=no -r frontend-build/* ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/tmp/frontend/
+        scp -i ssh_key -o StrictHostKeyChecking=no -r .github/workflows/configs/nginx.conf ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:~/nginx.conf
 
-
-    - name: SSH into VM, move build files, and restart Nginx
+    - name: SSH into VM, move build files and config, and restart Nginx
       run: | 
         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
-        sudo apt-get update
-        sudo apt-get install nginx -y
-        sudo systemctl start nginx
-        sudo systemctl enable nginx
+          sudo apt-get update
+          sudo apt-get install nginx -y
+          sudo systemctl start nginx
+          sudo systemctl enable nginx
         
-        sudo rm -rf /var/www/html
-        sudo mkdir -p /var/www/html
-        sudo mv /tmp/frontend/* /var/www/html/
+          sudo rm -rf /var/www/html
+          sudo mkdir -p /var/www/html
+          sudo mv /tmp/frontend/* /var/www/html/
         
-        sudo chown -R www-data:www-data /var/www/html/
+          sudo chown -R www-data:www-data /var/www/html/
 
-        sudo rm -rf /tmp/frontend/*
+          sudo rm -rf /tmp/frontend/*
+          sudo mv ~/nginx.conf /etc/nginx/sites-available/default
         
-        sudo systemctl restart nginx 
+          sudo systemctl restart nginx 
         EOF
 
     - name: Remove SSH private key file
       run: rm ssh_key
+
+    - name: Cloudflare - Update / Create DNS Entry (domain)
+      uses: everpcpc/cloudflare-dns-action@v1
+      with:
+        type: "A"
+        name: "${{ vars.DEPLOY_DOMAIN }}"
+        content: "${{ steps.get-vm-ip.outputs.vm_ip }}"
+        ttl: 1
+        proxied: false
+        token: ${{ secrets.CLOUDFLARE_API_KEY }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE }}
+      
+    - name: Cloudflare - Update / Create DNS Entry (www.domain)
+      uses: everpcpc/cloudflare-dns-action@v1
+      with:
+        type: "A"
+        name: "www.${{ vars.DEPLOY_DOMAIN }}"
+        content: "${{ steps.get-vm-ip.outputs.vm_ip }}"
+        ttl: 1
+        proxied: false
+        token: ${{ secrets.CLOUDFLARE_API_KEY }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE }}
+
