--- a/.github/workflows/build_deploy_exm_fe.yml
+++ b/.github/workflows/build_deploy_exm_fe.yml
@@ -63,6 +63,9 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
 
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Download build artifacts
       uses: actions/download-artifact@v4
       with:
