Bugfix/exm 28 fix url (#36)
* Update prod url

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed build&deploy fe

* Added 'Replace BE_BASE_URL in environment.prod.ts' step

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed environment.prod.ts file

* Fix data.sql to avoid crashing

+ Inserts are performed only if the rows do not exist.
+ Updates are performed only when there are changes to be made.
+ Added new categories and colors to align with feature/EXM-14-right-sidebar.

* Fixed build&deploy BE

* Fixed build&deploy BE

* fixed build&deploy be

* Update prod url

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed build&deploy fe

* Added 'Replace BE_BASE_URL in environment.prod.ts' step

* Fixed build&deploy fe

* Fixed build&deploy fe

* Fixed environment.prod.ts file

* Fix data.sql to avoid crashing

+ Inserts are performed only if the rows do not exist.
+ Updates are performed only when there are changes to be made.
+ Added new categories and colors to align with feature/EXM-14-right-sidebar.

* Fixed build&deploy BE

* fixed build&deploy be

* fixed build&deploy be

* fixed build&deploy be

* chore: squash-merge main

* fix: be workflow

* fix: remove http:// from baseURL

* feat/fix: tweaks and added nginx conf to handle ssl

* fix: quote java -jar args

* fix: remove single quotes from nohup

* chore: bump action version

* fix: change sed separator

* chore: bump upload artifact action version

* feat: change server port to allow nginx proxy to 8081

* fix: change port 8080 into gh actions var

* chore: bump download artifact action version

* fix: added gh workspace to sed paths

* fix: missing checkout step

---------

Co-authored-by: Beatrice Moraru <morarubeatrice77@yahoo.com>
Co-authored-by: Vlad-Stefan Sas <me@svs.pm>
Co-authored-by: Vlad-Ștefan Sas <github@svs.pm>

--- a/.github/workflows/build_deploy_exm_be.yml
+++ b/.github/workflows/build_deploy_exm_be.yml
@@ -25,10 +25,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Set up Java 17
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -43,7 +43,7 @@ jobs:
 
     - name: Upload build artifacts
       if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: backend-build
         path: expenses-manager-backend/target/*.jar
@@ -57,7 +57,7 @@ jobs:
 
     steps:
     - name: Download build artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: backend-build
         path: ./backend-build
@@ -82,8 +82,8 @@ jobs:
     - name: Verify /home/admin directory and create if missing
       run: |
         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
-        sudo mkdir -p /home/admin
-        sudo chown ${{ secrets.ADMIN_USERNAME }}:${{ secrets.ADMIN_USERNAME }} /home/admin
+          sudo mkdir -p /home/admin
+          sudo chown ${{ secrets.ADMIN_USERNAME }}:${{ secrets.ADMIN_USERNAME }} /home/admin
         EOF
 
     - name: Install Java JDK on VM
@@ -96,17 +96,22 @@ jobs:
     - name: Copy Artifact to VM
       run: |
        scp -i ssh_key -o StrictHostKeyChecking=no backend-build/*.jar ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }}:/home/admin/expenses-manager-backend.jar
-
+    
+    - name: Kill previous backend process (if any)
+      run: |
+        ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
+          if lsof -i :${{ vars.EXM_BE_PORT }}; then
+            sudo fuser -k ${{ vars.EXM_BE_PORT }}/tcp || true
+          else
+            echo "No process running on port ${{ vars.EXM_BE_PORT }}"
+          fi
+        EOF
+       
     - name: Run Backend Application
       run: |
-         ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<content
-           echo 'export DATABASE_URL="${{ secrets.DB_URL }}"' > run_backend.sh
-           echo 'export DATABASE_USERNAME="${{ secrets.DB_USERNAME }}"' >> run_backend.sh
-           echo 'export DATABASE_PASSWORD="${{ secrets.DB_PASSWORD }}"' >> run_backend.sh
-           echo 'java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod' >> run_backend.sh
-           nohup bash ./run_backend.sh > output.out 2>&1 &
-         content
-     
+        ssh -i ssh_key -o StrictHostKeyChecking=no ${{ secrets.ADMIN_USERNAME }}@${{ steps.get-vm-ip.outputs.vm_ip }} <<EOF
+          nohup java -jar /home/admin/expenses-manager-backend.jar --spring.profiles.active=prod --spring.datasource.url="${{ secrets.DB_URL }}" --spring.datasource.username="${{ secrets.DB_USERNAME }}" --spring.datasource.password="${{ secrets.DB_PASSWORD }}" --server.port="${{ vars.EXM_BE_PORT }}" > output.out 2>&1 &
+        EOF
 
     - name: Remove SSH private key file
       run: rm ssh_key
