Use the external API in currency setup

--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,18 @@
         <module>expenses-manager-backend</module>
         <module>expenses-manager-frontend</module>
     </modules>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
