--- a/expenses-manager-backend/src/main/resources/application.properties
+++ b/expenses-manager-backend/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-api.currency.url=https://api.exchangerate-api.com/v4/latest
+api.currency.url=https://v6.exchangerate-api.com/v6
 api.currency.key=648eddb87953dc6a0adcda6f
