--- a/expenses-manager-backend/src/main/resources/application.properties
+++ b/expenses-manager-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=expenses-manager-backend
-spring.profiles.default=PROD
+spring.profiles.default=DEV
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
 api.currency.url=https://v6.exchangerate-api.com/v6
 api.currency.key=648eddb87953dc6a0adcda6f
